fix issue with flexbox right alignment, removing the nav container

--- a/less/base/_navs.less
+++ b/less/base/_navs.less
@@ -1,40 +1,21 @@
 @import '../core/_colors';
 @import '../core/_variables';
 
-.upf-nav--container {
+.upf-nav {
   background-color: @upf-primary-bright-purple;
-  padding: @spacing-xx-sm;
-  color: rgba(255, 255, 255, 0.75);
+  border-bottom: none;
+  display: flex;
+  align-items: center;
+  list-style-type: none;
+
   height: 48px;
-
-  .upf-nav {
-    border-bottom: none;
-    display: flex;
-    align-items: baseline;
-    list-style-type: none;
-    padding-left: 0px;
-    margin-bottom: 0px;
-
-    .upf-nav__item--title {
-      a {
-        color: @color-text-contrast;
-        font-size: 2.2rem;
-        line-height: 2rem;
-
-        padding: 0;
-        margin-left: @spacing-xx-sm;
-        margin-right: @spacing-xx-sm;
-      }
-
-      a.active, a:hover {
-        border: none;
-        background-color: transparent;
-      }
-    }
-  }
+  padding: @spacing-xx-sm;
+  padding-left: 0;
+  margin-bottom: 0;
 }
 
 .upf-nav__item {
+  align-self: baseline;
   line-height: 2.6rem;
 
   &:not(:first-child) {
@@ -42,8 +23,8 @@
   }
 
   a {
-    color: rgba(255, 255, 255, 0.75);
-    font-size: 1.4rem;
+    color: @color-text-contrast-light;
+    font-size: 16/@rem;
     padding: @spacing-xxx-sm @spacing-xx-sm;
     user-select: none;
     text-decoration: none !important;
@@ -54,21 +35,49 @@
     border-radius: @default-radius;
     transition: color 0.2s linear, background 0.2s linear;
     background-color: @upf-primary-bright-purple-dark;
-    color: rgba(255, 255, 255, 1);
+    color: @color-text-contrast;
   }
 
   a:active {
-    color: rgba(255, 255, 255, 0.75);
+    color: @color-text-contrast-light;
   }
 
   .ember-transitioning-in {
-    color: rgba(255, 255, 255, 1);
+    color: @color-text-contrast-light;
     background-color: @upf-primary-bright-purple-dark;
   }
 
   .ember-transitioning-out {
-    color: rgba(255, 255, 255, 0.75) !important;
+    color: @color-text-contrast-light !important;
     background-color: rgba(0,0,0,0) !important;
+  }
+}
+
+.upf-nav__item--title {
+  a {
+    color: @color-text-contrast;
+    font-size: 24/@rem;
+    line-height: 2rem;
+
+    padding: 0;
+    margin-left: @spacing-xx-sm;
+    margin-right: @spacing-xx-sm;
+  }
+
+  a.active, a:hover {
+    border: none;
+    background-color: transparent;
+  }
+}
+
+.upf-nav__right {
+  display: inline-flex;
+  flex-grow: 1;
+  justify-content: flex-end;
+  margin-left: auto !important;
+
+  .upf-nav__item {
+    align-self: center;
   }
 }
 
